# ldap

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.build  README.md  docker_build.bat  documentation.md  travis_setup.sh
.github/workflows/: build_linux.yml  build_mac.yml  build_win.yml
docs/: README.md  build.md  examples.md  install.md  reference.md
examples/: README.md  digestMD5.q  kerberos.q  options.q  root_dse.q  search.q  test.q
q/: ldap.q
src/: kdbldap.c  kdbldap.h  sessions.c  sessions.h
